<resources>
    <string name="app_name">TamagotchiToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_due_by">Due by:</string>
    <string name="task_due_by_edit">Date here</string>
    <string name="back_button_text">Back</string>
    <string name="add_button_text">Add</string>
    <string name="new_task_name">New task</string>
    <string name="new_task_desc">Add description here</string>
    <string name="delete_button">Delete</string>
    <string name="done_button">Done</string>
    <string name="to_tasks_button">To tasks!</string>
    <string name="pet_name_intro">Name:</string>
    <string name="pet_name_edit">Name here</string>
    <string name="alert_title">Delete task</string>
    <string name="alert_message">Are you sure you want to delete this task?</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>
    <string name="pet_status_happy">happy!</string>
    <string name="pet_status_sad">sad...</string>
    <string name="pet_status_super_happy">super happy!!</string>
    <string name="pet_status_super_sad">super sad!</string>
    <string name="date_time_message">Today is</string>
    <string name="edit_due_date_month">MM</string>
    <string name="due_date_slash">/</string>
    <string name="edit_due_date_day">DD</string>
    <string name="toast_message">Please enter a valid date</string>
    <string name="toast_task_added">Task added!</string>
    <string name="toast_task_deleted">Task deleted! Please back out.</string>
    <string name="welcome_message">Welcome to Tamagotchi To Do!</string>
    <string name="snackbar_message">Task finished! Good job!</string>

</resources>